# mahala

./: Cargo.toml  LICENSE  README.md
.github/: settings.yml
.github/workflows/: ci.yml
examples/: burn_training.rs  candle_training.rs  embedding_training.rs  metric_learning.rs  mining_pipeline.rs
src/: axioms.rs  bounds.rs  burn_losses.rs  candle_losses.rs  lib.rs  losses.rs  mahalanobis.rs  mining.rs  similarity.rs
