[workspace]

[package]
name = "mahala"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Metric learning from Mahalanobis to InfoNCE: distance learning, contrastive losses, and hard negative mining"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/mahala"
categories = ["science", "algorithms"]
keywords = [
  "mahalanobis",
  "metric-learning",
  "contrastive-learning",
  "triplet-loss",
  "infonce",
]

[dependencies]
candle-core = { version = "0.9", optional = true }
innr = { version = "0.2", optional = true }
rand = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["mining"]
candle = ["dep:candle-core"]
mining = ["dep:rand"]
serde = ["dep:serde"]
simd = ["dep:innr"]
